--- a/package.json
+++ b/package.json
@@ -9,24 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.5.1",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-image": "~1.3.4",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "mobx": "^6.10.2",
+    "nativewind": "^2.0.11",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
+    "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "react-native-dotenv": "^3.4.9",
+    "tailwindcss": "3.3.2"
   },
   "resolutions": {
     "metro": "^0.73.7",
